--- a/css/layout/adjustment.scss
+++ b/css/layout/adjustment.scss
@@ -11,6 +11,7 @@ body {
 	line-height: 1.42;
 	-webkit-font-smoothing: antialiased;
 	background-image: url("../img/bg/bg.png");
+	background-repeat-y: no-repeat;
 }
 
 .container {
