--- a/css/sections/information.scss
+++ b/css/sections/information.scss
@@ -1,9 +1,10 @@
 .main__bottom {
-	padding: 27px 0;
+	padding-top: 27px;
 }
 
 .section {
 	display: flex;
+	justify-content: space-between;
 }
 
 .information {
@@ -22,4 +23,47 @@
 	font-size: 13px;
 	color: $gray-color;
 	line-height: 22px;
+}
+
+.projects {
+	width: 52%;
+}
+
+.projects__list {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.projects__item {
+	width: 148px;
+	margin-bottom: 27px;
+}
+
+.projects__link {
+	display: block;
+	text-decoration: none;
+}
+	
+.projects__pic {
+    height: 115px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    border: 4px solid #fff;
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,1);
+}
+
+.projects__img {
+    position: absolute;
+    top: 0;
+    left: -9999px;
+}
+
+.projects__name {
+	font-family: 'Helvetica Neue';
+	font-size: 14px;
+	color: #5b5b5b;
+	margin-top: 10px;
 }
