Adaptive design for tablets is finished

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@ $footer-height: 50px;
 $black-color: #000;
 $white-color: #fff;
 $gray-color: #585555;
+$red-color: #ff0000;
 //layout
 @import "layout/normalize";
 @import "layout/adjustment";
